@@ -136,6 +136,9 @@ Changed
 - `:config-diff` now has an `--include-hidden` flag, which also shows
   internally-set settings.
 - Improved error messages when `:spawn` can't find an executable.
+- When a process fails, the error message now suggests using `:process PID` with
+  the correct PID (rather than always showing the latest process, which might not
+  be the failing one)
 
 Fixed
 ~~~~~
